--- a/Service.yml
+++ b/Service.yml
@@ -1,15 +1,15 @@
 kind: Service                             
 apiVersion: v1
 metadata:
-  name: FirstDevopsProjectService
+  name: mrsaifservice
   labels:
-    app: FirstDevopsProject
+    app: mrsaif
 spec:
   ports:                      # we will redirect the port 8080 to port 80 ( the same port of our container which we defined his port on the Deployment.yaml)
     - port: 8080                                
       targetPort: 80                    
       nodePort: 31200
   selector:
-    app: FirstDevopsProject                    
+    app: mrsaif                    
   type: LoadBalancer    # a LoadBalancer Service is used when you want to expose your Service to the external world, and the cloud provider provisions a load balancer 
                         # to distribute traffic to the Service.
